# graphics-hw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  capture.cap  imgui.ini  todo.md
resources/: scene.yml  screwbar.txt  screwbar_cr.txt  test.swsf  test.txt
shaders/: default.frag  default.vert  light_node.vert  lighting.frag  lighting.vert  multitexture_triangle.frag  triangle.vert  wireframe.frag  wireframe.geom  wireframe.vert
src/: App.cpp  App.h  AppSettings.h  BSPTree.cpp  BSPTree.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SceneData.cpp  SceneData.h  Shader.cpp  Shader.h  SweptSurface.cpp  SweptSurface.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  glm_yaml_conv.h  main.cpp
src/nodes/: Camera.cpp  Camera.cpp.temp  Camera.cpp.temp2  Camera.h  Camera.h.temp  Camera.h.temp2  FirstPersonCamera.cpp  FirstPersonCamera.h  LightNode.cpp  LightNode.h  MeshNode.cpp  MeshNode.h  ModelNode.cpp  ModelNode.h  Node.cpp  Node.h  Spatial.cpp  Spatial.h  TrackballCamera.cpp  TrackballCamera.h
